--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3'
+version: "3"
 services: 
     postgres:
-        image: 'postgres:latest'
+        image: "postgres:latest"
         environment: 
             - POSTGRES_PASSWORD=postgres_password
     redis:
-        image: 'redis:latest'
+        image: "redis:latest"
     nginx:
         depends_on: 
             - api
@@ -15,7 +15,7 @@ services:
             dockerfile: Dockerfile.dev
             context: ./nginx    
         ports:
-            - '3050:80'
+            - "3050:80"
 
     api:
         depends_on: 
@@ -35,7 +35,7 @@ services:
             - PGPASSWORD=postgres_password
             - PGPORT=5432
     client:
-        stdin_open: true
+        # stdin_open: true
         build:
             dockerfile: Dockerfile.dev
             context: ./client
@@ -43,14 +43,14 @@ services:
             - /app/node_modules
             - ./client:/app
     worker:
+        environment:
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
         build:
             dockerfile: Dockerfile.dev
             context: ./worker
         volumes:
             - /app/node_modules
             - ./worker:/app
-        environment:
-            - REDIS_HOST=redis
-            - REDIS_PORT=6379
-
+            
     
